--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1 class="text-3xl text-red-300 text-center bg-yellow-300 font-bold underline">
     Hello world!
   </h1>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ut voluptas nihil eligendi quos deleniti quo dolorem beatae aut consequatur minus eius necessitatibus sapiente placeat, quas reprehenderit, blanditiis consectetur labore?</p>
+  <p class="text-red-900">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ut voluptas nihil eligendi quos deleniti quo dolorem beatae aut consequatur minus eius necessitatibus sapiente placeat, quas reprehenderit, blanditiis consectetur labore?</p>
 </body>
 </html>
